[gd_scene load_steps=6 format=3 uid="uid://mqinrbglnabd"]

[ext_resource type="Script" uid="uid://bjfhfjkxh5wyj" path="res://drone.gd" id="1_d5du7"]
[ext_resource type="PackedScene" uid="uid://cxqls7u3k34do" path="res://motor.tscn" id="1_uvgqj"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_uvgqj"]
points = PackedVector3Array(-0.15, -0.05, -0.15, -0.15, 0.05, -0.15, 0.15, -0.05, -0.15, -0.15, -0.05, 0.15, -0.15, 0.05, 0.15, 0.15, 0.05, -0.15, 0.15, -0.05, 0.15, 0.15, 0.05, 0.15)

[sub_resource type="BoxMesh" id="BoxMesh_etgmo"]
size = Vector3(0.3, 0.1, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_d5du7"]
top_radius = 0.03
bottom_radius = 0.03
height = 0.5

[node name="Drone" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_d5du7")

[node name="MoveForward" type="Marker3D" parent="."]

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_uvgqj")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 3.69464e-08, -7.9232e-08, -3.51911e-09, 0.888561, 0.458758, 8.7352e-08, 0.458758, -0.888561, 0, 2, -2.5)
current = true

[node name="Model" type="Node3D" parent="."]

[node name="LookForward" type="Marker3D" parent="Model"]

[node name="Mesh" type="MeshInstance3D" parent="Model"]
mesh = SubResource("BoxMesh_etgmo")
skeleton = NodePath("../..")

[node name="ArmFL" type="Node3D" parent="Model"]

[node name="Mesh" type="MeshInstance3D" parent="Model/ArmFL"]
transform = Transform3D(-3.09086e-08, 0.707107, -0.707107, -1, -4.37114e-08, 0, -3.09086e-08, 0.707107, 0.707107, 0.309, 0, 0.314)
mesh = SubResource("CylinderMesh_d5du7")
skeleton = NodePath("../../..")

[node name="Motor" parent="Model/ArmFL" instance=ExtResource("1_uvgqj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.035, 0.5)
clock_wise = false

[node name="ArmBR" type="Node3D" parent="Model"]

[node name="Mesh" type="MeshInstance3D" parent="Model/ArmBR"]
transform = Transform3D(3.09086e-08, -0.707107, 0.707107, -1, -4.37114e-08, 0, 3.09086e-08, -0.707107, -0.707107, -0.303, 0, -0.295)
mesh = SubResource("CylinderMesh_d5du7")
skeleton = NodePath("../../..")

[node name="Motor" parent="Model/ArmBR" instance=ExtResource("1_uvgqj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.035, -0.5)
clock_wise = false

[node name="ArmBL" type="Node3D" parent="Model"]

[node name="Mesh" type="MeshInstance3D" parent="Model/ArmBL"]
transform = Transform3D(3.09086e-08, -0.707107, -0.707107, -1, -4.37114e-08, 0, -3.09086e-08, 0.707107, -0.707107, 0.309, 0, -0.304)
mesh = SubResource("CylinderMesh_d5du7")
skeleton = NodePath("../../..")

[node name="Motor" parent="Model/ArmBL" instance=ExtResource("1_uvgqj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.035, -0.5)

[node name="ArmFR" type="Node3D" parent="Model"]

[node name="Mesh" type="MeshInstance3D" parent="Model/ArmFR"]
transform = Transform3D(-3.09086e-08, 0.707107, 0.707107, -1, -4.37114e-08, 0, 3.09086e-08, -0.707107, 0.707107, -0.301, 0, 0.314)
mesh = SubResource("CylinderMesh_d5du7")
skeleton = NodePath("../../..")

[node name="Motor" parent="Model/ArmFR" instance=ExtResource("1_uvgqj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.035, 0.5)
